Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64500

Widgets: QColorDialog does not save custom colors after relaunching

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.9.1
    • None
    • PC or Mac

      1. Start attached example and click "choose color" button.
      2. Drag and drop several colors to the Custom Colors palette. Don't use "Add to Custom Colors" button anytime!
      3. Press "Ok" and close application.
      4. Relaunch application and check the Custom Colors palette.

      Regression since Qt4

        1. ColorDialog.jpg
          ColorDialog.jpg
          42 kB
        2. ColorDialog.zip
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            lserge Serge Lysenko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes