Fix persistence of custom colors palette in QColorDialog

QColorDialog does not save custom colors after application
relaunching, if those colors were changed with drag'n'drop

Task-number: QTBUG-64500
Change-Id: I8ba6e1ef4e078f7b93463e7b20c9e21659d4777e
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>